Removed  /*position: fixed;*/ from div.message{ }
This made the flash notification message to always spread atop the contents of the page instead of being squeezed to the top right corner. 
The way it was before i changed it, it was covering the links at the top right corner of the page such as 'documentation' and 'API' links. 

I also added 
text-align: center; just to make sure the text stays in the center of the div.

--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -459,6 +459,7 @@ button {
 }
 
 div.message {
+	text-align: center;
     cursor: pointer;
     display: block;
     font-weight: normal;
@@ -466,13 +467,14 @@ div.message {
     transition: height 300ms ease-out 0s;
     background-color: #a0d3e8;
     color: #626262;
-    position: fixed;
     top: 15px;
     right: 15px;
     z-index: 999;
     overflow: hidden;
     height: 50px;
     line-height: 2.5em;
+    box-radius: 5px;
+    
 }
 
 div.message:before {
